--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-django>=4.0.0,<4.1.0
-djangorestframework
-pyyaml
-requests
-django-cors-headers
+asgiref==3.8.1
+Django==4.2
+django-cors-headers==4.5.0
+django-environ==0.11.2
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+PyJWT==2.9.0
+PyYAML==6.0.2
+sqlparse==0.5.1
