--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ httplib2==0.22.0
 idna==3.10
 proto-plus==1.24.0
 protobuf==5.28.2
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 PyJWT==2.9.0
