--- a/requirements.txt
+++ b/requirements.txt
@@ -39,4 +39,30 @@ uvicorn==0.32.0
 wcwidth==0.2.13
 whitenoise==6.8.2
 django-environ==0.10.0
-djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+
+
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+django-cors-headers==4.5.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.65.0
+httplib2==0.22.0
+idna==3.10
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyJWT==2.9.0
+pyparsing==3.2.0
+PyYAML==6.0.2
+requests==2.32.3
+rsa==4.9
+uritemplate==4.1.1
+urllib3==2.2.3
